--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// comments#index
+
+.comment {
+  margin: 1em auto;
+  padding: 1em;
+  width: 50%;
+  border: 1px solid #000;
+}
