--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -6,7 +6,22 @@
 
 .comment {
   margin: 1em auto;
-  padding: 1em;
+  padding: 0 1em;
   width: 50%;
   border: 1px solid #000;
+}
+
+.comment .author,
+.comment .actions {
+  padding: 0;
+  font-weight: bold;
+}
+
+.comment .content {
+  padding: 0 1em;
+}
+
+.comment .author li,
+.comment .actions li {
+  display: inline-block;
 }
