--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,9 +7,15 @@
 
   <% @comments.each do |comment| %>
     <div class="comment">
-      <ul>
+      <ul class="author">
         <li><%= comment.full_name %></li>
-        <li><%= comment.email %></li>
+        <li>(<%= mail_to comment.email %>)</li>
+      </ul>
+      <p class="content">
+        <%= comment.id %>
+        Lorem ipsum
+      </p>
+      <ul class="actions">
         <li><%= link_to 'Show', comment %></li>
         <li><%= link_to 'Edit', edit_comment_path(comment) %></li>
         <li><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></li>
