--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,10 +1,13 @@
-<main>
-  <p id="notice"><%= notice %></p>
-
+<header>
   <h1>Listing Top Level Comments</h1>
 
   <p>This page is for demo purposes.  For most web app needs, there is no practical use case for an index of top-level comments.</p>
+<header>
 
+<main>
+
+  <p id="notice"><%= notice %></p>
+  <%= link_to 'New Comment', new_comment_path %>
   <% @comments.each do |comment| %>
     <div class="comment">
       <ul class="author">
@@ -23,5 +26,8 @@
     </div>
   <% end %>
 
-  <%= link_to 'New Comment', new_comment_path %>
 </main>
+
+<footer>
+  &copy; 2015
+</footer>
