--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -15,8 +15,7 @@
         <li>(<%= mail_to comment.email %>)</li>
       </ul>
       <p class="content">
-        <%= comment.id %>
-        Lorem ipsum
+        <%= comment.content %>
       </p>
       <ul class="actions">
         <li><%= link_to 'Show', comment %></li>
