--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,13 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field inline">
     <%= f.label :full_name %><br>
     <%= f.text_field :full_name %>
   </div>
-  <div class="field">
+  <div class="field inline">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :content %><br>
+    <%= f.text_area :content %>
   </div>
   <div class="actions">
     <%= f.submit %>
