--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -10,5 +10,9 @@
   <%= @comment.email %>
 </p>
 
+<p>
+  <%= @comment.content %>
+</p>
+
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
 <%= link_to 'Back', comments_path %>
