--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,18 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Full name:</strong>
-  <%= @comment.full_name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @comment.email %>
-</p>
-
-<p>
-  <%= @comment.content %>
-</p>
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= render @comment %>
