update informative text in comments#index and #show

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,3 +1,16 @@
+<header>
+  <h1><%= "Comment ##{@comment.id}" %></h1>
+
+  <p>You're viewing a single a comment - not much to see here.</p>
+<header>
+
+<main>
+
+
 <p id="notice"><%= notice %></p>
 
 <%= render @comment %>
+
+</main>
+
+<%= render 'shared/footer' %>
