--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <h1>Listing Top Level Comments</h1>
+  <h1>Listing All Comments</h1>
 
-  <p>This page is for demo purposes.  For most web app needs, there is no practical use case for an index of top-level comments.</p>
+  <p>This page is for demo purposes.  For most web app needs, there is no practical use case for an index of all comments.</p>
 <header>
 
 <main>
@@ -14,6 +14,4 @@
 
 </main>
 
-<footer>
-  &copy; 2015
-</footer>
+<%= render 'shared/footer' %>
