--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,4 +16,31 @@
 
 html {
   font-size: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  margin: 0;
+}
+
+nav {
+  position: relative;
+  padding: 0;
+  background-color: #ddd;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  font-size: 1.2em;
+  padding: 1em 2em;
+  display: inline-block;
+}
+
+header, main {
+  padding: .5em;
 }
