store email and full_name in session on comments#create

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field inline">
     <%= f.label :full_name %><br>
-    <%= f.text_field :full_name %>
+    <%= f.text_field :full_name, value: @comment.new_record? ? session[:full_name] : @comment.full_name %>
   </div>
   <div class="field inline">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, value: @comment.new_record? ? session[:email] : @comment.email %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
