add simple auth on comments#edit #update and #destroy

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,6 +7,7 @@
 <main>
 
   <p id="notice"><%= notice %></p>
+  <p id="alert"><%= alert %></p>
   <% @comments.each do |comment| %>
     <%= render comment %>
   <% end %>
