set up Comment has_many and belongs_to relationship

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Comment</h1>
+<header>
+  <h1>New Comment</h1>
+</header>
 
-<%= render 'form' %>
+<main>
+  <%= render 'form' %>
 
-<%= link_to 'Back', comments_path %>
+  <%= link_to 'Back', comments_path %>
+</main>
+
+<%= render 'shared/footer' %>
