--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,7 +12,7 @@
       <li><%= link_to 'Edit', edit_comment_path(comment) %></li>
       <li><%= link_to 'Delete', comment, method: :delete, data: { confirm: 'Are you sure?' } %></li>
     <% else %>
-      <li><%= link_to 'New Comment', controller: :comments, action: :new, comment: comment %></li>
+      <li><%= link_to 'Reply', controller: :comments, action: :new, comment: comment %></li>
     <% end %>
   </ul>
 
