--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,9 +8,7 @@
 
   <p id="notice"><%= notice %></p>
   <p id="alert"><%= alert %></p>
-  <% @comments.each do |comment| %>
-    <%= render comment %>
-  <% end %>
+  <%= render @comments %>
 
 </main>
 
