update informative text and minor styles

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <h1>Listing All Comments</h1>
-
-  <p>This page is for demo purposes.  For most web app needs, there is no practical use case for an index of all comments.</p>
+  <h1>Join the Converastion!</h1>
+  <p>As this app has no articles to comment on, you must comment first to get this conversation going!</p>
+  <p>Then someone else may reply to you!</p>
 <header>
 
 <main>
