--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,7 +1,8 @@
 <header>
   <h1><%= "Comment ##{@comment.id}" %></h1>
 
-  <p>You're viewing a single a comment - not much to see here.</p>
+  <p>This page shows a comment and all of its replies.</p>
+  <p>Go back to the <%= link_to 'home page', root_path %> to see this top comment's parent comment.</p>
 <header>
 
 <main>
